# BasicCMakeProject

./: CMakeLists.txt  README.md
components/Function1/: Function1.c  Function1.h
components/cJSON/: cJSON.c
src/: main.c
